img fix resposive about & work

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h3 class="p_title">Project name</h3>
                 <a class="v_project" href="#">
                   <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="" />
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
                 </a>
               </div>
             </div>
@@ -131,7 +131,7 @@
                 <h3 class="p_title">Project name</h3>
                 <a class="v_project" href="#">
                   <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="" />
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
                 </a>
               </div>
             </div>
@@ -152,7 +152,7 @@
                 <h3 class="p_title">Project name</h3>
                 <a class="v_project" href="#">
                   <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="" />
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
                 </a>
               </div>
             </div>
@@ -173,7 +173,7 @@
                 <h3 class="p_title">Project name</h3>
                 <a class="v_project" href="#">
                   <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="" />
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
                 </a>
               </div>
             </div>
@@ -194,7 +194,7 @@
                 <h3 class="p_title">Project name</h3>
                 <a class="v_project" href="#">
                   <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="" />
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
                 </a>
               </div>
             </div>
@@ -215,7 +215,7 @@
                 <h3 class="p_title">Project name</h3>
                 <a class="v_project" href="#">
                   <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="" />
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
                 </a>
               </div>
             </div>
