--- a/work.html
+++ b/work.html
@@ -14,62 +14,62 @@
     <!-- header section start -->
     <header>
         <div class="container">
-          <nav class="head_content">
-            <div class="logo">
-              <a href="index.html"> Zakir <span>Soft</span> </a>
-            </div>
-            <div class="menu">
-              <ul class="m_bar">
-                <li></li>
-                <li></li>
-              </ul>
-            </div>
-          </nav>
+            <nav class="head_content">
+                <div class="logo">
+                    <a href="index.html"> Zakir <span>Soft</span> </a>
+                </div>
+                <div class="menu">
+                    <ul class="m_bar">
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-      </header>
+    </header>
     <!-- Menus -->
     <div class="fullscreen-menu">
         <div class="menu-body">
             <div class="container">
-              <div class="menu-container">
-                  <div class="menu-close">
-                    <ul class="close-bar">
-                      <li></li>
-                      <li></li>
-                    </ul>
-                  </div>
-                  <div class="main-menu">
-                    <ul>
-                      <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                      <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
-                      <li> <a href="work.html"> <span>03</span> Work </a> </li>
-                      <li> <a href="career.html"> <span>04</span> Career </a> </li>
-                      <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
-                    </ul>
-                  </div>
+                <div class="menu-container">
+                    <div class="menu-close">
+                        <ul class="close-bar">
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="main-menu">
+                        <ul>
+                            <li> <a href="index.html"> <span>01</span> Home </a> </li>
+                            <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
+                            <li> <a href="work.html"> <span>03</span> Work </a> </li>
+                            <li> <a href="career.html"> <span>04</span> Career </a> </li>
+                            <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="menu-footer">
-          <div class="container">
-            <ul class="footer-social">
-              <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-github"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-facebook-f"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-linkedin-in"></i> </a></li>
-            </ul>
-            <div class="copyright-text">
-              <p> &copy; 2020 - Zakirsoft </h5>
+            <div class="container">
+                <ul class="footer-social">
+                    <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-github"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-facebook-f"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-linkedin-in"></i> </a></li>
+                </ul>
+                <div class="copyright-text">
+                    <p> &copy; 2020 - Zakirsoft </h5>
+                </div>
             </div>
-          </div>
         </div>
     </div>
     <!-- header section end -->
 
- 
+
     <!-- work section start -->
     <section id="work" class="none">
         <div class="container">
@@ -88,8 +88,9 @@
                             <div class="work_tab">
                                 <ul class="nav nav-pills mr-auto" id="pills-tab" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link   active" id="pills-all-tab" data-toggle="pill" href="#pills-all"
-                                            role="tab" aria-controls="pills-all" aria-selected="true">all</a>
+                                        <a class="nav-link   active" id="pills-all-tab" data-toggle="pill"
+                                            href="#pills-all" role="tab" aria-controls="pills-all"
+                                            aria-selected="true">all</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="pills-frontend-tab" data-toggle="pill"
@@ -97,12 +98,13 @@
                                             aria-selected="false">frontend</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="pills-backend-tab" data-toggle="pill" href="#pills-backend"
-                                            role="tab" aria-controls="pills-backend" aria-selected="false">backend</a>
+                                        <a class="nav-link" id="pills-backend-tab" data-toggle="pill"
+                                            href="#pills-backend" role="tab" aria-controls="pills-backend"
+                                            aria-selected="false">backend</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="pills-ui-tab" data-toggle="pill" href="#pills-ui" role="tab"
-                                            aria-controls="pills-ui" aria-selected="false">UI/UX</a>
+                                        <a class="nav-link" id="pills-ui-tab" data-toggle="pill" href="#pills-ui"
+                                            role="tab" aria-controls="pills-ui" aria-selected="false">UI/UX</a>
                                     </li>
                                 </ul>
                             </div>
