add pop up video

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <title>zakirsoft</title>
   <link rel="stylesheet" href="assets/css/all.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/magnific-popup.css">
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -88,8 +89,8 @@
                 <img src="assets/images/about/about3.png" alt="img"/>
               </div>
               <div class="play_video">
-                <a href="#">
-                  <span class="play_icon"><img src="assets/images/icon.png" alt="icon" /> Play
+                <a href="https://www.youtube.com/watch?v=LOzUl2KStvA" class="popup-video">
+                  <span class="play_icon"><img src="assets/images/icon.png" alt="icon"/> Play
                     Video</span>
                 </a>
               </div>
@@ -306,11 +307,11 @@
   <!-- footer section end -->
 
   <!-- all js goes here -->
-  <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
+  <script src="assets/js/jquery-1.12.4.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="assets/js/app.js"></script>
-  <script></script>
 </body>
 
 </html>
