--- a/work.html
+++ b/work.html
@@ -80,35 +80,37 @@
             </div>
             <div class="work_content">
                 <div class="container">
-                    <div class="row border-bottom align-items-center mb-50">
-                        <div class="col-md-6">
-                            <div class="tab-text">
-                                <p>These all our team member recent work</p>
+                    <div class="border-bottom pb-5">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <div class="tab-text">
+                                    <p>These all our team member recent work</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="work_tab">
-                                <ul class="nav nav-pills mr-auto" id="pills-tab" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link   active" id="pills-all-tab" data-toggle="pill"
-                                            href="#pills-all" role="tab" aria-controls="pills-all"
-                                            aria-selected="true">all</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" id="pills-frontend-tab" data-toggle="pill"
-                                            href="#pills-frontend" role="tab" aria-controls="pills-frontend"
-                                            aria-selected="false">frontend</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" id="pills-backend-tab" data-toggle="pill"
-                                            href="#pills-backend" role="tab" aria-controls="pills-backend"
-                                            aria-selected="false">backend</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" id="pills-ui-tab" data-toggle="pill" href="#pills-ui"
-                                            role="tab" aria-controls="pills-ui" aria-selected="false">UI/UX</a>
-                                    </li>
-                                </ul>
+                            <div class="col-md-6">
+                                <div class="work_tab">
+                                    <ul class="nav nav-pills mr-auto justify-content-end" id="pills-tab" role="tablist">
+                                        <li class="nav-item">
+                                            <a class="nav-link   active" id="pills-all-tab" data-toggle="pill"
+                                                href="#pills-all" role="tab" aria-controls="pills-all"
+                                                aria-selected="true">all</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="pills-frontend-tab" data-toggle="pill"
+                                                href="#pills-frontend" role="tab" aria-controls="pills-frontend"
+                                                aria-selected="false">frontend</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="pills-backend-tab" data-toggle="pill"
+                                                href="#pills-backend" role="tab" aria-controls="pills-backend"
+                                                aria-selected="false">backend</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="pills-ui-tab" data-toggle="pill" href="#pills-ui"
+                                                role="tab" aria-controls="pills-ui" aria-selected="false">UI/UX</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
