--- a/work.html
+++ b/work.html
@@ -89,7 +89,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="work_tab">
-                                    <ul class="nav nav-pills mr-auto justify-content-end" id="pills-tab" role="tablist">
+                                    <ul class="nav nav-pills mr-auto" id="pills-tab" role="tablist">
                                         <li class="nav-item">
                                             <a class="nav-link   active" id="pills-all-tab" data-toggle="pill"
                                                 href="#pills-all" role="tab" aria-controls="pills-all"
