add some file slider

--- a/details.html
+++ b/details.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -15,85 +16,85 @@
     <!-- header section start -->
     <header>
         <div class="container">
-          <nav class="head_content">
-            <div class="logo">
-              <a href="index.html"> Zakir <span>Soft</span> </a>
-            </div>
-            <div class="menu">
-              <ul class="m_bar">
-                <li></li>
-                <li></li>
-              </ul>
-            </div>
-          </nav>
+            <nav class="head_content">
+                <div class="logo">
+                    <a href="index.html"> Zakir <span>Soft</span> </a>
+                </div>
+                <div class="menu">
+                    <ul class="m_bar">
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-      </header>
+    </header>
     <!-- Menus -->
     <div class="fullscreen-menu">
         <div class="menu-body">
             <div class="container">
-              <div class="menu-container">
-                  <div class="menu-close">
-                    <ul class="close-bar">
-                      <li></li>
-                      <li></li>
-                    </ul>
-                  </div>
-                  <div class="main-menu">
-                    <ul>
-                      <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                      <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
-                      <li> <a href="work.html"> <span>03</span> Work </a> </li>
-                      <li> <a href="career.html"> <span>04</span> Career </a> </li>
-                      <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
-                    </ul>
-                  </div>
+                <div class="menu-container">
+                    <div class="menu-close">
+                        <ul class="close-bar">
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="main-menu">
+                        <ul>
+                            <li> <a href="index.html"> <span>01</span> Home </a> </li>
+                            <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
+                            <li> <a href="work.html"> <span>03</span> Work </a> </li>
+                            <li> <a href="career.html"> <span>04</span> Career </a> </li>
+                            <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="menu-footer">
-          <div class="container">
-            <ul class="footer-social">
-              <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-github"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-facebook-f"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-linkedin-in"></i> </a></li>
-            </ul>
-            <div class="copyright-text">
-              <p> &copy; 2020 - Zakirsoft </h5>
+            <div class="container">
+                <ul class="footer-social">
+                    <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-github"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-facebook-f"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
+                    <li><a href="#"> <i class="fab fa-linkedin-in"></i> </a></li>
+                </ul>
+                <div class="copyright-text">
+                    <p> &copy; 2020 - Zakirsoft </h5>
+                </div>
             </div>
-          </div>
         </div>
     </div>
     <!-- header section end -->
 
 
     <!-- details slider section start -->
-    <section class="details-slier">
+    <section id="details_slier">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="details-slider-active">
                         <div class="single-slider">
-                            <img class="img-fluid" src="assets/images/project-img/img-1.png" alt="project-img">
+                            <img  src="assets/images/project-img/img-1.png" alt="project-img">
                         </div>
                         <div class="single-slider">
-                            <img class="img-fluid" src="assets/images/project-img/img-2.png" alt="project-img">
+                            <img  src="assets/images/project-img/img-2.png" alt="project-img">
                         </div>
                         <div class="single-slider">
-                            <img class="img-fluid" src="assets/images/project-img/img-3.png" alt="project-img">
+                            <img  src="assets/images/project-img/img-3.png" alt="project-img">
                         </div>
                         <div class="single-slider">
-                            <img class="img-fluid" src="assets/images/project-img/img-4.png" alt="project-img">
+                            <img  src="assets/images/project-img/img-4.png" alt="project-img">
                         </div>
                         <div class="single-slider">
-                            <img class="img-fluid" src="assets/images/project-img/img-5.png" alt="project-img">
+                            <img  src="assets/images/project-img/img-5.png" alt="project-img">
                         </div>
                         <div class="single-slider">
-                            <img class="img-fluid" src="assets/images/project-img/img-6.png" alt="project-img">
+                            <img  src="assets/images/project-img/img-6.png" alt="project-img">
                         </div>
                     </div>
                 </div>
@@ -108,34 +109,34 @@
     <!-- details section end -->
 
     <!-- details project section start -->
-    <section id="project_area" class="none">
+    <section id="project_area">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
-                    <div class="section_title">
+                <div class="col-md-9 offset-md-3">
+                    <div class="project_title_2">
                         <h2>About projects</h2>
                     </div>
                     <div class="project_wrapper">
-                        <div class="project-text">
+                        <div class="project_text">
                             <p>Duis porta, ligula rhoncus euismod pretium, nisi tellus eleifend odio, luctus viverra sem
                                 dolor id sem. Maecenas a venenatis enim, quis porttitor magna. Etiam nec rhoncus neque.
                                 Sed quis ultrices eros. Curabitur sit amet eros eu arcu consectetur pulvinar. Aliquam
                                 sodales, turpis eget tristique tempor, sapien lacus facilisis diam, molestie efficitur
                                 sapien velit nec magna. Maecenas interdum efficitur tempor. Quisque scelerisque id odio
                                 nec dictum. Donec sed pulvinar tortor.
-                            </p>
-                            <p class="pt-100">mattis est. Nullam mattis mauris quis massa consectetur dapibus. Nam ac
+                                <br> <br>
+                                mattis est. Nullam mattis mauris quis massa consectetur dapibus. Nam ac
                                 iaculis magna. Sed eget diam mi. Sed id quam et purus luctus pretium.</p>
                         </div>
-                        <div class="project-button">
+                        <div class="project_button">
                             <a class="button" href="#">View Project on live</a>
-                            <a class="button" href="#">View Project on live</a>
+                            <a href="#">View Project on live <img src="assets/images/Arrow-icon.png" alt="arrow_icon"></a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row mt-100">
+                <div class="col-md-3 offset-md-3">
                     <div class="our_role">
                         <ul>
                             <h4>Our Role</h4>
@@ -144,7 +145,7 @@
                             <li>Front end</li>
                         </ul>
                     </div>
-                    <div class="our_role">
+                    <div class="our_role mb-50">
                         <ul>
                             <h4>Tools Used</h4>
                             <li>note js</li>
@@ -153,7 +154,7 @@
                             <li>Blender</li>
                         </ul>
                     </div>
-                    <div class="our_role">
+                    <div class="our_role mb-50">
                         <ul>
                             <h4>project length</h4>
                             <li>11 Month</li>
@@ -162,18 +163,18 @@
                 </div>
                 <div class="col-md-6">
                     <div class="our_role_img">
-                        <img src="assets/images/klim-musalimov-mm5hzUbW65g-unsplash.jpg" alt="images" class="img-fluid">
+                        <img src="assets/images/ww.jpg" alt="images" class=" img-fluid">
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- details project section end -->
-    
+
     <!-- project-name area section end -->
     <section id="details-project">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center mb-100">
                 <div class="col-4">
                     <div class="project_info">
                         <p>Previous Projects</p>
@@ -191,7 +192,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row align-items-center mb-100">
                 <div class="col-4">
                     <div class="project_info">
                         <p>Next Projects</p>
@@ -216,11 +217,11 @@
 
 
     <!-- footer section start -->
-    <footer id="footer-area" class="none">
+    <footer id="footer_area" class="none">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="footer-menu">
+                    <div class="footer_menu">
                         <span>Quick Link</span>
                         <ul class="nav_links">
                             <li class="nav_items"><a href="index.html">Home</a></li>
@@ -230,27 +231,43 @@
                             <li class="nav_items"><a href="join-us.html">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="connect-imfo">
+                    <div class="connect_info">
                         <h4>Connect With us</h4>
-                        <p>In consequat, quam id sodales hendrerit, eros mi molestie leo, nec lacinia risus neque
-                            tristique augue. Proin tempus urna vel congue elementum.
+                        <p>
+                            In consequat, quam id sodales hendrerit, eros mi molestie leo,
+                            nec lacinia risus neque tristique augue. Proin tempus urna vel
+                            congue elementum.
                         </p>
-                        <span>Zakirsoft@outlook.com</span>
+                        <span class="email">Zakirsoft@outlook.com</span>
                     </div>
-                    <div class="solial-link">
-                        <ul>
-                            <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                            <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fab fa-github"></i></a></li>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <div>
+                        <ul class="social_links">
+                            <li>
+                                <a href="#"><i class="fab fa-behance"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-dribbble"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-github"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="copyright-text">
+                    <div class="copyright_text">
                         <p>&#169; 2020 - Zakirsoft</p>
                     </div>
                 </div>
@@ -258,10 +275,12 @@
         </div>
     </footer>
     <!-- footer section end -->
+
     <!-- all js goes here -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
