--- a/index.html
+++ b/index.html
@@ -120,12 +120,111 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-                  class="img-fluid"
                 />
               </div>
             </div>
           </div>
           <div class="slide_item col-12">
+            <div class="col-4">
+              <div class="slide_info">
+                <span class="p_type">Project type</span>
+                <h3 class="p_title">Project name</h3>
+                <a class="v_project" href="#">
+                  <span>View Project</span>
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
+                </a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="project_img">
+                <img
+                  src="assets/images/project-img/img-7.png"
+                  alt="project-img"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="slide_item col-12">
+            <div class="col-4">
+              <div class="slide_info">
+                <span class="p_type">Project type</span>
+                <h3 class="p_title">Project name</h3>
+                <a class="v_project" href="#">
+                  <span>View Project</span>
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
+                </a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="project_img">
+                <img
+                  src="assets/images/project-img/img-7.png"
+                  alt="project-img"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="slide_item col-12">
+            <div class="col-4">
+              <div class="slide_info">
+                <span class="p_type">Project type</span>
+                <h3 class="p_title">Project name</h3>
+                <a class="v_project" href="#">
+                  <span>View Project</span>
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
+                </a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="project_img">
+                <img
+                  src="assets/images/project-img/img-7.png"
+                  alt="project-img"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="slide_item col-12">
+            <div class="col-4">
+              <div class="slide_info">
+                <span class="p_type">Project type</span>
+                <h3 class="p_title">Project name</h3>
+                <a class="v_project" href="#">
+                  <span>View Project</span>
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
+                </a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="project_img">
+                <img
+                  src="assets/images/project-img/img-7.png"
+                  alt="project-img"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="slide_item col-12">
+            <div class="col-4">
+              <div class="slide_info">
+                <span class="p_type">Project type</span>
+                <h3 class="p_title">Project name</h3>
+                <a class="v_project" href="#">
+                  <span>View Project</span>
+                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
+                </a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="project_img">
+                <img
+                  src="assets/images/project-img/img-7.png"
+                  alt="project-img"
+                />
+              </div>
+            </div>
+          </div>
+          <!-- <div class="slide_item col-12">
             <div class="col-4">
               <div class="slide_info">
                 <span class="p_type">Project type</span>
@@ -229,7 +328,7 @@
                 />
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <h4 class="drag_text">Drag</h4>
       </div>
