fixed issues on previous work

--- a/index.html
+++ b/index.html
@@ -15,60 +15,60 @@
     <!-- header section start -->
     <header>
       <div class="container">
-        <nav class="head_content">
-          <div class="logo">
-            <a href="index.html"> Zakir <span>Soft</span> </a>
-          </div>
-          <div class="menu">
-            <ul class="m_bar">
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
-        </nav>
+          <nav class="head_content">
+              <div class="logo">
+                  <a href="index.html"> Zakir <span>Soft</span> </a>
+              </div>
+              <div class="menu">
+                  <ul class="m_bar">
+                      <li></li>
+                      <li></li>
+                  </ul>
+              </div>
+          </nav>
       </div>
-    </header>
-    <!-- Menus -->
-    <div class="fullscreen-menu">
-        <div class="menu-body">
-            <div class="container">
+  </header>
+  <!-- Menus -->
+  <div class="fullscreen-menu">
+      <div class="menu-body">
+          <div class="container">
               <div class="menu-container">
                   <div class="menu-close">
-                    <ul class="close-bar">
-                      <li></li>
-                      <li></li>
-                    </ul>
+                      <ul class="close-bar">
+                          <li></li>
+                          <li></li>
+                      </ul>
                   </div>
                   <div class="main-menu">
-                    <ul>
-                      <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                      <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
-                      <li> <a href="work.html"> <span>03</span> Work </a> </li>
-                      <li> <a href="career.html"> <span>04</span> Career </a> </li>
-                      <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
-                    </ul>
+                      <ul>
+                          <li> <a href="index.html"> <span>01</span> Home </a> </li>
+                          <li> <a href="about.html" > <span>02</span> About </a> </li>
+                          <li> <a href="work.html"> <span>03</span> Work </a> </li>
+                          <li> <a href="career.html"> <span>04</span> Career </a> </li>
+                          <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
+                      </ul>
                   </div>
-                </div>
-            </div>
-        </div>
-        <div class="menu-footer">
-          <div class="container">
-            <ul class="footer-social">
-              <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-github"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-facebook-f"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
-              <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
-              <li><a href="#"> <i  class="fab fa-linkedin-in"></i> </a></li>
-            </ul>
-            <div class="copyright-text">
-              <p> &copy; 2020 - Zakirsoft </h5>
-            </div>
+              </div>
           </div>
-        </div>
-    </div>
-    <!-- header section end -->
+      </div>
+      <div class="menu-footer">
+          <div class="container">
+              <ul class="footer-social">
+                  <li><a href="#"> <i class="fab fa-behance"></i> </a></li>
+                  <li><a href="#"> <i class="fab fa-dribbble"></i> </a></li>
+                  <li><a href="#"> <i class="fab fa-github"></i> </a></li>
+                  <li><a href="#"> <i class="fab fa-facebook-f"></i> </a></li>
+                  <li><a href="#"> <i class="fab fa-twitter"></i> </a></li>
+                  <li><a href="#"> <i class="fab fa-instagram"></i> </a></li>
+                  <li><a href="#"> <i class="fab fa-linkedin-in"></i> </a></li>
+              </ul>
+              <div class="copyright-text">
+                  <p> &copy; 2020 - Zakirsoft </h5>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- header section end -->
 
     <!-- banner section start -->
     <section id="banner" class="none">
@@ -120,7 +120,6 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-                  class="img-fluid"
                 />
               </div>
             </div>
@@ -141,7 +140,6 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-                  class="img-fluid"
                 />
               </div>
             </div>
@@ -162,7 +160,6 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-                  class="img-fluid"
                 />
               </div>
             </div>
@@ -183,7 +180,6 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-                  class="img-fluid"
                 />
               </div>
             </div>
@@ -204,7 +200,6 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-                  class="img-fluid"
                 />
               </div>
             </div>
@@ -225,7 +220,6 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-                  class="img-fluid"
                 />
               </div>
             </div>
